<resources>
    <string name="app_name" translatable="false">Quote App</string>
    <string name="dashboard_1">Get quotations</string>
    <string name="dashboard_2">Favourite quotations</string>
    <string name="dashboard_3">Settings</string>
    <string name="dashboard_4">About</string>
    <string name="title_dashboard_1">Random quotations</string>
    <string name="title_dashboard_2">Favourite quotations</string>
    <string name="title_dashboard_3">Settings</string>
    <string name="title_dashboard_4">About</string>
    <string name="about_info">Quotation Shake by\n\nDaniel Herrero\n\ndanihp6@gmail.com\n\n2020</string>
    <string name="settings_name">Username</string>
    <string name="settings_name_info">Name that identifies the user</string>
    <string name="settings_void_name">Insert your name</string>
    <string name="settings_language">Quotations will be received in the selected language</string>
    <string name="settings_preferences">Select your preferences</string>
    <string name="settings_http_method">Web requests will be performed using the selected HTTP method</string>
    <string name="settings_get" translatable="false">GET</string>
    <string name="settings_post" translatable="false">POST</string>
    <string name="settings_db_method">Data will be received using the selected provider</string>
    <string name="settings_room" translatable="false">Room</string>
    <string name="settings_helper" translatable="false">SQLiteOpenHelper</string>
    <string name="settings_clear">Restore default</string>
    <string name="favourite_author_info">Author info</string>
    <string name="quotation_welcome">welcome!\nPress Refresh to get a new quotation</string>
    <string name="quotation_default_name">Nameless user</string>
    <string name="quotation_sample_quotation">Sample quote</string>
    <string name="quotation_sample_author">Sample author</string>
    <string name="quotation_red_problems">Sorry, but there are problems with the network</string>
    <string name="settings_english">English</string>
    <string name="settings_russian">Russian</string>
    <string name="favourite_empty_author">Anonymous author</string>
    <string name="favourite_empty_author_info">Anonymous author, it must not possible return information</string>
    <string name="favourite_dialog_remove">Are you sure that you want to delete this quotation?</string>
    <string name="favourite_dialog_remove_yes">Quotation removed</string>
    <string name="quotation_add_favourites">Add</string>
    <string name="quotation_refresh_quote">Refresh</string>
    <string name="favourite_clear">Clear All</string>
    <string name="favourite_dialog_clear">Are you sure that you want to delete ALL your favourte quotations?</string>
    <string name="favourite_dialog_clear_yes">Cleared all</string>
</resources>