<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <Button
        android:id="@+id/b_dashboard_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/buttons"
        android:onClick="dashboardNavigate"
        android:text="@string/dashboard_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/buttons"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/b_dashboard_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_dashboard_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/buttons"
        android:onClick="dashboardNavigate"
        android:text="@string/dashboard_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/buttons"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/b_dashboard_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_dashboard_1" />

    <Button
        android:id="@+id/b_dashboard_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/buttons"
        android:onClick="dashboardNavigate"
        android:text="@string/dashboard_3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/buttons"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/b_dashboard_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_dashboard_2" />

    <Button
        android:id="@+id/b_dashboard_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttons"
        android:onClick="dashboardNavigate"
        android:text="@string/dashboard_4"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/buttons"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_dashboard_3" />
</androidx.constraintlayout.widget.ConstraintLayout>